[EFL] Fix typo introduced in r115800. https://bugs.webkit.org/show_bug.cgi?id=85354

Patch by Dongwoo Im <dw.im@samsung.com> on 2012-05-02
Reviewed by Nikolas Zimmermann.

* ewk/ewk_view.cpp:
(_Ewk_View_Private_Data): Assign 1 bit to the boolean attribute, webAudio.

Canonical link: https://commits.webkit.org/102892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115809 268f45cc-cd09-0410-ab3c-d52691b4dbfc